# Policyah

./: .gitignore  Makefile  README.md  pyproject.toml
policyah/: main.py  read_c7n.py
