[tool.poetry]
name = "policyah"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "policyah" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
c7n = "^0.9.37"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
